mywork/force-app/main/default/objects/Jenkins_Build__c/Jenkins_Build__c.object-meta.xml
<CustomObject>
    <label>Jenkins Build</label>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Jenkins Build Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jenkins Builds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>