mywork/force-app/main/default/objects/Jenkins_Build__c/fields/CI_Instance__c.field-meta.xml
<CustomField>
    <fullName>CI_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CI Instance</label>
    <referenceTo>CI_Instance__c</referenceTo>
    <relationshipLabel>Jenkins Builds</relationshipLabel>
    <relationshipName>Jenkins_Builds</relationshipName>
    <type>Lookup</type>
</CustomField>