mywork/force-app/main/default/objects/Jenkins_Build__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <formula>HYPERLINK( $Setup.Jenkins_Config__c.Endpoint__c + "/" + Jenkins_Job__r.Path__c + "/" + Jenkins_Job_Id__c, "Open in Jenkins")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The link to the build in Jenkins</inlineHelpText>
    <label>External Link</label>
    <type>Text</type>
</CustomField>