mywork/force-app/main/default/objects/Jenkins_Build__c/fields/Jenkins_Job__c.field-meta.xml
<CustomField>
    <fullName>Jenkins_Job__c</fullName>
    <label>Jenkins Job</label>
    <referenceTo>Jenkins_Job__c</referenceTo>
    <relationshipLabel>Jenkins Builds</relationshipLabel>
    <relationshipName>Jenkins_Builds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>