mywork/force-app/main/default/objects/Jenkins_Build__c/fields/Jenkins_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Jenkins_Job_Id__c</fullName>
    <description>Id of the Jenkins job from the Jenkins' server.</description>
    <label>Jenkins Job Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>