mywork/force-app/main/default/objects/Jenkins_Build__c/fields/Package_URL__c.field-meta.xml
<CustomField>
    <fullName>Package_URL__c</fullName>
    <description>The url of the build package sent to jenkins</description>
    <inlineHelpText>The url of the build package sent to jenkins</inlineHelpText>
    <label>Package URL</label>
    <type>Url</type>
</CustomField>