mywork/force-app/main/default/objects/Jenkins_Build__c/fields/Reused_Build__c.field-meta.xml
<CustomField>
    <fullName>Reused_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reused Build</label>
    <referenceTo>Jenkins_Build__c</referenceTo>
    <relationshipLabel>Copied Jenkins Builds</relationshipLabel>
    <relationshipName>Reused_Build</relationshipName>
    <type>Lookup</type>
</CustomField>