mywork/force-app/main/default/objects/Jenkins_Build__c/fields/Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Status_Details__c</fullName>
    <label>Status Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>