mywork/force-app/main/default/objects/Jenkins_Build__c/fields/Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time__c</fullName>
    <description>Trigger time custom field to trigger the Success update after sometime</description>
    <formula>LastModifiedDate - 0.040</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Time</label>
    <type>DateTime</type>
</CustomField>